# cuda_dynamic

./: README.md
main/: CMakeLists.txt  main.cpp
package_1/: CMakeLists.txt
package_1/include/: package_1.h  package_1_kernel.h
package_1/src/: package_1.cpp  package_1_kernel.cu
package_2/: CMakeLists.txt
package_2/include/: package_2.h  package_2_kernel.h
package_2/src/: package_2.cpp  package_2_kernel.cu
